--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -5,16 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
 
-    <link rel="icon" type="image/x-icon" href="{{url_for ('catalog.static', filename='catalog/images/logo.png')}}">
+    <link rel="icon" type="image/x-icon" href="{{url_for ('catalog.static', filename='catalog/images/ico.png')}}">
     <title>{% block title %}{% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet"
-        href="{{url_for('catalog.static', filename='catalog/vendor/bootstrap/css/bootstrap.min.css')}}" />
+    <link rel="stylesheet" href="{{url_for('catalog.static', filename='catalog/vendor/bootstrap/css/bootstrap.min.css')}}" />
 
     <!-- Additional CSS Files -->
 
@@ -22,7 +19,7 @@
     <link rel="stylesheet" href="{{url_for('catalog.static', filename='catalog/css/templatemo-cyborg-gaming.css')}}" />
     <link rel="stylesheet" href="{{url_for('catalog.static', filename='catalog/css/owl.css')}}" />
     <link rel="stylesheet" href="{{url_for('catalog.static', filename='catalog/css/animate.css')}}" />
-    <link rel="stylesheet" href="{{url_for('catalog.static', filename='catalog/css/swiper-bundle.min.css')}}" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
 
     <!--
 
@@ -33,6 +30,9 @@ https://templatemo.com/tm-579-cyborg-gaming
 -->
 
     {% block heading %}
+    {% endblock %}
+
+    {% block style %}
     {% endblock %}
 
 </head>
@@ -59,15 +59,14 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
-                        <a href="index.html" class="logo">
+                        <a href="{{url_for('catalog.home')}}" class="logo">
                             <img src="{{url_for('catalog.static', filename='catalog/images')}}/logo.png" alt="" />
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Search End ***** -->
                         <div class="search-input">
-                            <form id="search" action="#">
-                                <input type="text" placeholder="Type Something" id="searchText" name="searchKeyword"
-                                    onkeypress="handle" />
+                            <form id="search" action="{{url_for('catalog.list_games')}}" method="post">
+                                <input type="text" placeholder="Type Something" id="searchText" name="searchKeyword" onkeypress="handle" />
                                 <i class="fa fa-search"></i>
                             </form>
                         </div>
@@ -81,8 +80,7 @@ https://templatemo.com/tm-579-cyborg-gaming
                             {% if current_user.is_authenticated %}
 
                             <li><a href="{{url_for('auth.profile')}}">Profile <img
-                                        src="{{url_for('catalog.static', filename='catalog/images')}}/profile-header.jpg"
-                                        alt="" /></a>
+                                        src="{{url_for('catalog.static', filename='catalog/images')}}/profile-header.jpg" alt="" /></a>
                             </li>
                             {% else %}
                             <li><a href="{{url_for('auth.login')}}">Login </a>
@@ -105,13 +103,27 @@ https://templatemo.com/tm-579-cyborg-gaming
 
     {% endblock %}
 
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright © 2036 <a href="#">Cyborg Gaming</a> Company. All rights reserved.
+
+                        <br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a>
+                        Distributed By <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
     <!-- Scripts -->
     <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <script src="{{url_for('catalog.static', filename='catalog/vendor/jquery/jquery.min.js')}}"></script>
-    <script src="{{url_for('catalog.static', filename='catalog/vendor/bootstrap/bootstrap.min.js')}}"></script>
+    <script src="{{url_for('catalog.static', filename='catalog/vendor/bootstrap/js/bootstrap.min.js')}}"></script>
 
     <!-- Plugin JavaScript -->
     <script src="{{url_for('catalog.static', filename='catalog/js/isotope.min.js')}}"></script>
@@ -119,7 +131,8 @@ https://templatemo.com/tm-579-cyborg-gaming
     <script src="{{url_for('catalog.static', filename='catalog/js/tabs.js')}}"></script>
     <script src="{{url_for('catalog.static', filename='catalog/js/popup.js')}}"></script>
     <script src="{{url_for('catalog.static', filename='catalog/js/custom.js')}}"></script>
-
+    {% block scripts %}
+    {% endblock %}
 </body>
 
 </html>
