--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -5,13 +5,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet" />
 
     <link rel="icon" type="image/x-icon" href="{{url_for ('catalog.static', filename='catalog/images/ico.png')}}">
     <title>{% block title %}{% endblock %}</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="{{url_for('catalog.static', filename='catalog/vendor/bootstrap/css/bootstrap.min.css')}}" />
+    <link rel="stylesheet"
+        href="{{url_for('catalog.static', filename='catalog/vendor/bootstrap/css/bootstrap.min.css')}}" />
 
     <!-- Additional CSS Files -->
 
@@ -66,7 +68,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <!-- ***** Search End ***** -->
                         <div class="search-input">
                             <form id="search" action="{{url_for('catalog.list_games')}}" method="post">
-                                <input type="text" placeholder="Type Something" id="searchText" name="searchKeyword" onkeypress="handle" />
+                                <input type="text" placeholder="Type Something" id="searchText" name="searchKeyword"
+                                    onkeypress="handle" />
                                 <i class="fa fa-search"></i>
                             </form>
                         </div>
@@ -75,12 +78,12 @@ https://templatemo.com/tm-579-cyborg-gaming
                         <ul class="nav">
                             <li><a href="{{url_for('catalog.home')}}" class="active">Home</a></li>
                             <li><a href="{{url_for('catalog.browse')}}">Browse</a></li>
-                            <li><a href="{{url_for('catalog.streams')}}">Streams</a></li>
 
                             {% if current_user.is_authenticated %}
 
                             <li><a href="{{url_for('auth.profile')}}">Profile <img
-                                        src="{{url_for('catalog.static', filename='catalog/images')}}/profile-header.jpg" alt="" /></a>
+                                        src="{{url_for('catalog.static', filename='catalog/images')}}/profile-header.jpg"
+                                        alt="" /></a>
                             </li>
                             {% else %}
                             <li><a href="{{url_for('auth.login')}}">Login </a>
@@ -110,7 +113,8 @@ https://templatemo.com/tm-579-cyborg-gaming
                 <div class="col-lg-12">
                     <p>Copyright © 2036 <a href="#">Cyborg Gaming</a> Company. All rights reserved.
 
-                        <br>Design: <a href="https://templatemo.com" target="_blank" title="free CSS templates">TemplateMo</a>
+                        <br>Design: <a href="https://templatemo.com" target="_blank"
+                            title="free CSS templates">TemplateMo</a>
                         Distributed By <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
                     </p>
                 </div>
